# custom_reader

./: .gitignore  plan.md  pyproject.toml  requirements.md  run.sh  ui-requirements.md
docs/api/: index.html  openapi.yaml
docs/api/paths/: articles-id-markdown.yaml  articles-id-tags-id.yaml  articles-id-tags.yaml  articles-id.yaml  articles.yaml  categories-id.yaml  categories.yaml  feeds-fetch.yaml  feeds-id-categories.yaml  feeds-id-fetch.yaml  feeds-id-sync.yaml  feeds-id.yaml  feeds.yaml  (+5 more)
docs/cli/: reader-add.1.md  reader-articles.1.md  reader-categories.1.md  reader-categorize.1.md  reader-export.1.md  reader-feeds.1.md  reader-fetch.1.md  reader-import.1.md  reader-mark.1.md  reader-read.1.md  reader-remove.1.md  reader-save.1.md  reader-tag.1.md  reader.1.md  server.py
requirements/: manhwa-tracker-research.md  nitter-filter-research.md  requiremenets-v2.md  requirements.md
src/reader/: cli.py  config.py  database.py  errors.py  server.py
static/: index.html
static/assets/: index-BCDNN43x.js  index-By4J1XQK.css  index-CNjRyXNI.css  index-Gr3oNy50.js
tests/: conftest.py  test_articles_api.py  test_categories_api.py  test_cli.py  test_favicon.py  test_feeds_api.py  test_nitter.py  test_nitter_filter.py  test_opml.py  test_source_detection.py  test_sync_api.py  test_tags_api.py
tests/fixtures/: article_empty.html  article_normal.html  atom_standard.xml  blog_no_link.html  blog_with_link.html  feeds.opml  nitter_feed.xml  rss_minimal.xml  rss_standard.xml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.ts  router.ts
(+60 files in other folders)
