[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reader"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "aiosqlite>=0.17",
    "sqlalchemy[asyncio]>=2.0",
    "click>=8.1",
    "httpx>=0.24",
    "feedparser>=6.0",
    "trafilatura>=1.0",
    "markdownify>=0.11",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.scripts]
reader = "reader.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/reader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
